@@ -1,3 +1,9 @@
+2008-08-27  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* gas/i386/intel.s: Add tests for fidivr.
+
+	* gas/i386/intel.d: Updated.
+
 2008-08-26  Jie Zhang  <jie.zhang@analog.com>
 
 	* gas/bfin/arith_mode.d: New test.
